--- a/final/final/about.html
+++ b/final/final/about.html
@@ -45,7 +45,7 @@
     <main class="page">
       <section class="about-page">
         <article>
-          <h2>I'm baby coloring book poke taxidermy</h2>
+          <h2>Simple Recipes - Less Stress, More Joy</h2>
           <p>
             Taxidermy forage glossier letterpress heirloom before they sold out
             you probably haven't heard of them banh mi biodiesel chia.
@@ -64,7 +64,7 @@
         />
       </section>
       <section class="featured-recipes">
-        <h5 class="featured-title">Look At This Awesomesouce!</h5>
+        <h5 class="featured-title">Look At Some Of Our Other Dishes!</h5>
         <div class="recipes-list">
           <!-- single recipe -->
           <a href="single-recipe.html" class="recipe">
