--- a/final/final/about.html
+++ b/final/final/about.html
@@ -47,12 +47,13 @@
         <article>
           <h2>Simple Recipes - Less Stress, More Joy</h2>
           <p>
-            Taxidermy forage glossier letterpress heirloom before they sold out
-            you probably haven't heard of them banh mi biodiesel chia.
+            Simply Recipes is here help you cook delicious meals with less stress an more joy. 
+            We offer recipes and cooking advice for home cooks, by home cooks. 
+            Helping create "Kitchen wins" is what we're all about.
           </p>
           <p>
-            Taiyaki tumblr flexitarian jean shorts brunch, aesthetic salvia
-            retro.
+            We're supported by a diverse group of recipe developers, food writers, recipe and
+            product testers, photographers, and other creative professionals.
           </p>
           <a href="contact.html" class="btn"> contact </a>
         </article>
